Wed Dec 13 02:00:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VpSetPTR): fix for limitation of the resulting
	  precision.
	  [ruby-core:50269] [Bug #7458]

	* test/bigdecimal/test_bigdecimal.rb (test_limit): add tests for the above
	  change.

Wed Dec 13 01:56:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VpAddAbs): put out a conditional branch from
	  the inside of while-loop.

	* ext/bigdecimal/bigdecimal.c (VpSubAbs): ditto.

Wed Dec 13 01:53:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VPrint): be a static function, support another
	  dump formats, and add more information of the given bigdecimal.

	* ext/bigdecimal/bigdecimal.h: ditto.

Wed Dec 11 16:45:58 2013  Koichi Sasada  <ko1@atdot.net>

	* eval.c (rb_raise_jump): call c_return hook immediately after
	  popping `raise' frame.
	  Patches by deivid (David Rodriguez). [Bug #8886]

	* test/ruby/test_settracefunc.rb: catch up this fix.

Wed Dec 11 16:01:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_reject): return a plain hash, without copying
	  the class, default value, instance variables, and taintedness.
	  they had been copied just by accident.
	  [ruby-core:59045] [Bug #9223]

Wed Dec 11 15:36:15 2013  Aman Gupta <ruby@tmm1.net>

	* compile.c (iseq_specialized_instruction): emit opt_aset instruction
	  to optimize Hash#[]= and Array#[]= when called with Fixnum argument.
	  [Bug #9227] [ruby-core:58956]

Wed Dec 11 04:54:03 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master ec8ed22.  Notable changes
	  include:

	  * Renamed extension_install_dir to extension_dir (backwards
	    compatible).

	  * Fixed creation of gem.deps.rb.lock file from
	    TestGemRequestSet#test_install_from_gemdeps_install_dir

	  * Fixed a typo and some documentation.

	* test/rubygems:  ditto.

Wed Dec 11 03:18:08 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
